# arca23k-dataset

./: .gitignore  README.md  README.rst  client.json  description.txt  pyproject.toml  requirements.txt
metadata/: fsd50k_mids.csv
src/: convert_audio.py  create_fsd50k_subset.py  curate_datasets.py  download_clips.py  query_freesound.py  retrieve.py  utils.py
src/retrieval/: __init__.py  preprocessing.py  retrieval.py
