[tool.poetry]
name = "arca23k-dataset"
version = "0.1.0"
description = "The code used to create the ARCA23K and ARCA23K-FSD datasets"
authors = ["Turab Iqbal <t.iqbal@surrey.ac.uk>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.6.2"
numpy = "^1.21.2"
pandas = "^1.3.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
